05/18/2017
- add unauth_action "pass" option to .authenticate(); closes #53; thanks @dholth

05/14/2017
- renew access token on expiration with refresh token grant; thanks @gonzalad
- use ngx.time instead of os.time, everywhere now

04/29/2017
- support for prompt parameter during authorization, returning session data, and logout url override thanks @gdestuynder

03/27/2017
- avoid crashes when no session is found upon callback to the redirect_uri; may address #43
- release 1.3.1

02/28/2017
- add dist.ini for OpenResty OPM; should address #38

02/13/2017
- support RFC 7662 for token introspection: use exp for TTL cache control closes #35; thanks @iperdomo
- add @iperdomo to AUTHORS

02/09/2017
- change rockspec so all newer dependencies/Lua versions are allowed instead of a single static version

02/09/2017
- merge $24; thanks @hanikesn :
  - feature JWT validation through discovery
  - allow user-mode verification of tokens via separate function
  - improved handling of invalid JWT Tokens
- release 1.3.0

11/18/2016
- make the compact serialized form of the id_token available in the session data in enc_id_token; #closes #28
- release 1.2.3

11/17/2016
- validate discovery url against issuer field; closes #25
- release 1.2.2

10/12/2016
- document that we can luarocks for installation

8/31/2016
- add ChangeLog
- change rockspec so it installs as resty.openidc; closes #20; thanks @dholth
- release 1.2.1-0