@@ -16,3 +16,4 @@ reporting bugs, providing fixes, suggesting useful features or other:
 	Robert <https://github.com/p0pr0ck5>
 	Guillaume Destuynder (kang) <https://www.insecure.ws/>
 	gonzalad <https://github.com/gonzalad>
+	Gene Wood <https://github.com/gene1wood>
